doc/compile-error.log
src/CmdInterpreter.cc:30:5: warning: field 'player' will be initialized after field 'state' [-Wreorder]
    player(NULL),
    ^
src/CmdInterpreter.cc:33:20: error: array type 'char *[]' is not assignable
        this->argv = argv;
        ~~~~~~~~~~ ^
src/CmdInterpreter.cc:119:34: error: use of undeclared identifier 'mapping'
            floor->setSpawnRates(mapping);
                                 ^
1 warning and 2 errors generated.
make: *** [build/CmdInterpreter.o] Error 1
